# asptranslate

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: acyc.c  acyc2solver.c  common.h  counter.c  graph2sat.c  lp2acyc.c  lp2normal.c  lp2normal2.c  lp2sat.c  lpreify.c  primitives.c  scc.c  support.c  unsat2lp.c
